--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,10 @@
 export(binGlmP)
 export(lmP)
 export(lmSim)
+export(metaRsim)
 export(powBinGlmPlot)
 export(powLmPlot)
+export(powMetaRPlot)
 export(powerBinGlm)
+export(powerMetaR)
 export(powerlm)
