--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,9 +8,9 @@ export(expCont3)
 export(lmP)
 export(lmSim)
 export(metaRsim)
-export(powBinGlmPlot)
+export(powGlmPlot)
 export(powLmPlot)
-export(powMetaRPlot)
+export(powMetaPlot)
 export(powerBinGlm)
 export(powerMetaR)
 export(powerlm)
