--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(expCont2)
 export(expCont2Rand)
 export(expCont3)
 export(expCont3Rand)
+export(lmME)
 export(lmP)
 export(lmSim)
 export(metaRsim)
