--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(expCont2)
 export(expCont2Rand)
 export(expCont3)
 export(expCont3Rand)
+export(glmME)
 export(lmME)
 export(lmP)
 export(lmSim)
@@ -22,3 +23,5 @@ export(powerBinGlm)
 export(powerBinGlmRand)
 export(powerMetaR)
 export(powerlm)
+export(precisionglm)
+export(precisionlm)
