--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,5 +24,6 @@ export(powerBinGlmRand)
 export(powerMetaR)
 export(powerlm)
 export(precisionglm)
+export(precisionglmPlot)
 export(precisionlm)
 export(precisionlmPlot)
